--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:weightSum="1">
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -33,11 +34,11 @@
 	<GridView
 		android:id="@+id/gridview"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="441dp"
 		android:numColumns="auto_fit"
 		android:verticalSpacing="1dp"
 		android:horizontalSpacing="1dp"
 
-		/>
+		android:layout_weight="1.86"/>
 
 </LinearLayout>
