--- a/app/src/main/res/menu/menu_movie_detail.xml
+++ b/app/src/main/res/menu/menu_movie_detail.xml
@@ -2,5 +2,10 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="linyingwang.popularmovies.MovieDetail">
-
+      <item android:id="@+id/action_favorite"
+            android:title="@string/action_favorite"
+            android:orderInCategory="1"
+            android:icon="@drawable/like_outline_white"
+            app:showAsAction="always"
+            />
 </menu>
