--- a/app/src/main/res/menu/menu_movie_detail.xml
+++ b/app/src/main/res/menu/menu_movie_detail.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="linyingwang.popularmovies.MovieDetail">
+      tools:context="linyingwang.popularmovies.MovieDetailActivity">
       <item android:id="@+id/action_favorite"
             android:title="@string/action_favorite"
-            android:orderInCategory="1"
+            android:orderInCategory="2"
             android:icon="@drawable/like_outline_white"
             app:showAsAction="always"
             />
