--- a/app/src/main/res/layout-land/fragment_movie_detail.xml
+++ b/app/src/main/res/layout-land/fragment_movie_detail.xml
@@ -88,7 +88,7 @@
 			android:layout_alignParentLeft="true"
 			android:layout_alignParentStart="true"
 			android:layout_below="@+id/plot"
-			android:layout_marginTop="15dp"
+			android:layout_marginTop="10dp"
 			android:text="Trailers: "
 			android:textStyle="bold"
 			android:textAppearance="?android:attr/textAppearanceMedium"/>
@@ -102,12 +102,11 @@
 			android:layout_below="@id/textView2"
 			android:horizontalSpacing="1dp"
 			android:isScrollContainer="false"
-			android:numColumns="auto_fit"
+			android:numColumns="3"
 			android:verticalSpacing="1dp"
 			android:focusable="false"/>
 		<!--android:nestedScrollingEnabled="true"-->
 		<!--/>-->
-
 		<TextView
 			android:id="@+id/review"
 			android:layout_width="wrap_content"
@@ -122,19 +121,21 @@
 
 		<com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
 			android:id="@+id/expandable_listview"
-			android:layout_below="@id/review"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+		    android:layout_below="@id/review"
 			android:textAppearance="?android:attr/textAppearanceSmall"
 			/>
+
 		<ProgressBar
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:id="@+id/progressBar"
 			android:layout_above="@+id/plot"
-			android:layout_toRightOf="@+id/imageView"
-			android:layout_toEndOf="@+id/imageView"
+			android:layout_toRightOf="@+id/release_date"
+			android:layout_toEndOf="@+id/release_date"
 			android:visibility="gone"/>
+
 	</RelativeLayout>
 </ScrollView>
 
