FEAT: implements Parcelable to both Trailer and Review class. add a button to share the trailer of a movie

--- a/app/src/main/res/menu/menu_movie_detail.xml
+++ b/app/src/main/res/menu/menu_movie_detail.xml
@@ -8,4 +8,10 @@
             android:icon="@drawable/like_outline_white"
             app:showAsAction="always"
             />
+      <item android:id="@+id/action_share"
+            android:title="@string/action_share"
+            android:orderInCategory="3"
+            android:icon="@drawable/ic_action_share"
+            app:showAsAction="always"
+          />
 </menu>
