--- a/app/src/main/res/menu/menu_movie_grid.xml
+++ b/app/src/main/res/menu/menu_movie_grid.xml
@@ -2,10 +2,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
-
-	<item android:id="@+id/action_load_more"
-	      android:title="@string/action_load_more"
-	      android:orderInCategory="1"
-	      app:showAsAction="ifRoom"/>
+	<item
+		android:id="@+id/action_search"
+		android:title="@string/action_search"
+		android:icon="@drawable/ic_action_search"
+		android:orderInCategory="1"
+		app:showAsAction="always"
+	    app:actionViewClass="android.support.v7.widget.SearchView"/>
 
 </menu>
