UPDATE: fix bugs: 1. when screen ratates, the current page number is not saved; 2. my favorites cannot be displayed when offline; 3. favorite movies not saved when screen rotates

--- a/app/src/main/res/menu/menu_movie_detail.xml
+++ b/app/src/main/res/menu/menu_movie_detail.xml
@@ -12,6 +12,6 @@
             android:title="@string/action_share"
             android:orderInCategory="3"
             android:icon="@drawable/ic_action_share"
-            app:showAsAction="always"
+            app:showAsAction="ifRoom"
           />
 </menu>
